--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                     <a href="#">logo</a>
                 </div>
 
-                <nav id="link">
-                    <a href="#">logo</a>
-                    <a href="#">logo</a>
-                    <a href="#">logo</a>
-                    <a href="#">logo</a>
-                    <a href="#">logo</a>
+                <nav class="logo-login" id="nav">
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
+                    <a href="#">link</a>
                 </nav>
 
                 <div class="logo-login" id="login">
-                    <a href="#">logo</a>
+                    <a href="#">login</a>
                 </div>
                     
             </div>
