--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
             </section>
         </main>
 
+        
+
+        <footer>
+            <div id="container-finale">
+                <div id="logo-finale">
+                    Logo
+                </div>
+                <div id="bottone-finale">
+                    <input type="button" value="Bottone">
+                </div>
+            </div>
+
+        </footer>
+
     </div>
     
 </body>
